syntax = "proto3";

option java_package = "com.cmpe275.lab1";

service user{
    rpc login(LoginRequest)  returns (APIResponse);
    rpc logout(Empty)  returns (APIResponse);
    rpc getMesonetData(Empty) returns (MesonetDataList);
}

message LoginRequest{
       string username = 1 ;
       string password = 2 ;
}

message APIResponse{
      string responsemessage = 1;
      int32  responseCode  = 2;
}

message MesonetData{
	string stationID = 1;
	string stationName = 2;
	string stationType = 3;
}

message MesonetDataList {
	repeated MesonetData mesonetData = 1;
}

message Empty{
}